<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.xtx</groupId>
	<artifactId>UT4X-Converter</artifactId>
	<version>1.0.2</version>
	<packaging>jar</packaging>

	<name>UT4 Converter</name>

	<properties>
		<java.version>16</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<javafx.version>16</javafx.version>
		<slf4j.version>1.7.29</slf4j.version>
		<log4j.version>2.13.3</log4j.version>
		<jaxb.version>2.2.11</jaxb.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>org.xtx.ut4converter.MainApp</mainClass>
		<junit.version>5.2.0</junit.version>
		<upgrade.uuid>9134cc3f-269d-46f2-8ff9-b182c28798bb</upgrade.uuid>
	</properties>

	<organization>
		<!-- Used as the 'Vendor' for JNLP generation -->
		<name>Xtreme Labs</name>
	</organization>

	<build>
		<plugins>
			<!-- COMPILE PROJECT -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>16</release>
					<source>15</source>
					<target>15</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<mainClass>${mainClass}</mainClass>
				</configuration>
			</plugin>

			<!-- skips test by default else would convert all maps -->
			<!-- TODO need to find a way to test something -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>

			<!-- creates UT4X-Converter jar file into /libs folder -->
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>${project.build.directory}/libs</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resources1</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/g16convert</outputDirectory>
							<resources>
								<resource>
									<directory>app/g16convert</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources2</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/sox</outputDirectory>
							<resources>
								<resource>
									<directory>app/sox</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources3</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/utxextractor</outputDirectory>
							<resources>
								<resource>
									<directory>app/utxextractor</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources4</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/conf</outputDirectory>
							<resources>
								<resource>
									<directory>app/conf</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-libs</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs</outputDirectory>
							<includeScope>runtime</includeScope>
							<excludeGroupIds>org.openjfx</excludeGroupIds>
						</configuration>
					</execution>
					<execution>
						<id>copy-modules</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/mods</outputDirectory>
							<includeScope>runtime</includeScope>
							<includeGroupIds>org.openjfx</includeGroupIds>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<!-- CREATES AN INSTALLER FOR UT4 CONVERTER -->
			<!-- https://docs.oracle.com/en/java/javase/16/docs/specs/man/jpackage.html -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<id>create-package</id>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${java.home}/bin/jpackage</executable>
							<workingDirectory>${project.build.directory}</workingDirectory>
							<longModulepath>false</longModulepath>
							<environmentVariables>
								<JAVA_HOME>${java.home}</JAVA_HOME>
							</environmentVariables>
							<arguments>
								<!-- jpackage arguments -->
								<argument>--verbose</argument>
								<argument>--input</argument>
								<argument>${project.build.directory}/libs</argument>

								<argument>--main-jar</argument>
								<argument>./${project.artifactId}-${project.version}.jar</argument>

								<argument>--dest</argument>
								<argument>package</argument>

								<argument>--app-version</argument>
								<argument>${project.version}</argument>

								<argument>--name</argument>
								<argument>${project.artifactId}</argument>

								<argument>--description</argument>
								<argument>UT4X Converter</argument>

								<argument>--vendor</argument>
								<argument>Thomas 'WinterIsComing' P.</argument>

								<argument>--copyright</argument>
								<argument>You are free to distribute and use with tool but with no commercial use</argument>

								<!-- FOR INSTALL, ONLY do it for current user and not all -->
								<argument>--win-per-user-install</argument>

                                <argument>--win-dir-chooser</argument>
								<argument>--win-shortcut</argument>
								<argument>--win-upgrade-uuid</argument>
								<argument>${upgrade.uuid}</argument>

								<!-- jlink arguments -->
								<argument>--module-path</argument>
								<argument>${project.build.directory}/mods</argument>

								<argument>--add-modules</argument>
								<argument>java.base,java.desktop,java.xml,jdk.unsupported,javafx.base,javafx.graphics,javafx.controls,javafx.fxml</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<!-- LOGGING -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>log4j-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.5.2</version>
		</dependency>
		<!-- for reading .pcx textures -->
		<dependency>
			<groupId>com.github.jai-imageio</groupId>
			<artifactId>jai-imageio-core</artifactId>
			<version>1.4.0</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.9</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.10.0</version>
		</dependency>


		<!-- JAVA FX  -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>


		<!-- TESTING -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<description>Converter for Unreal Tournament 4 (UT2015) game</description>

</project>
